# dmrghandler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  reaction_energies.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/diagrams/src/: job.puml  loading.puml  main_diagrams.puml
examples/: catalysis_instances.csv  example_niagara_prepare_calcs_gsee_benchmark_coarse_set.py  extract_process_dmrg_results.ipynb  extract_process_dmrg_results_app_paper.ipynb  extract_process_dmrg_results_mo_n2_pincer_4a.ipynb  extract_process_dmrg_results_mo_n2_pincer_reac_1.ipynb  extract_process_template.ipynb  extrapolation.ipynb  hami_21_data.csv  hami_29_data.csv  hami_31_data.csv  hami_9_data.csv  plotting.ipynb  plotting_paper.ipynb  to_plot.csv
src/dmrghandler/: __init__.py  config_io.py  data_processing.py  dmrg_calc_prepare.py  dmrg_looping.py  dmrghandler.py  energy_extrapolation.py  fcidump_io.py  hdf5_io.py  model_hamiltonians.py  profiling.py  pyscf_wrappers.py  qchem_dmrg_calc.py  slurm_scripts.py
tests/: test_dmrg_looping.py  test_dmrghandler.py  test_extrapolation.py  test_fcidump_io.py  test_model_hamiltonians.py  test_non_singlet.py  test_qchem_dmrg_calc.py  test_single_calc_whole_run.py  test_single_python_run.py  test_whole_single_calc.py
tests/fcidump_temp/: fcidump.temp
tests/test_data/: fcidump.34_3ruo_IV_2pl_{'Ru' _ 'lanl2tz', 'default' _ '6-31+G(d,p)'}  fcidump.7_melact_6-311++G__  fcidump.be_cc-pVDZ.cc2b3628-dc13-4a95-8765-37211a995068  fcidump.test  fcidump.test_3
