[tool.poetry]
name = "dmrghandler"
version = "0.1.0"
description = "Handle DMRG calculations"
authors = ["Joshua T. Cantin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
block2 = "==0.5.2"
pyscf = "^2.5.0"
matplotlib = "^3.8.3"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
