[tool.poetry]
name = "dmrghandler"
version = "0.2.0"
description = "Handle DMRG calculations"
authors = ["Joshua T. Cantin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pyscf = "^2.6.2"
matplotlib = "^3.5"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
openfermion = "^1.6.1"
notebook = "^7.2.1"
openpyxl = "^3.1.5"
memory-profiler = "^0.61.0"
ipympl = "^0.9.4"
block2-mpi = "0.5.3rc19"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "block2-mpi"
url = "https://block-hczhai.github.io/block2-preview/pypi/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
